# chao_fan

./: .gitignore  .spr.yml  README.md  REAMDE.md  database.db  embeddings.py  generate.py  headlines.txt  pyproject.toml  response_converted.json
.github/workflows/: cd.yml  ci.yml  ci_cd.yml  lint.yml  python_unittest.yml  update_recipe_db.yml
chao_fan/: cli.py  constants.py  db.py  models.py  utils.py
chao_fan/integrations/: llama.py  pinterest.py  recipe_scrapers.py  sentence_transformer.py  spoonacular.py  vss.py
chao_fan/pipelines/: generate_embedings.py  prepare_meal_plan.py  update_recipe_db.py
chao_fan/tests/: test_recipe_scraper.py  test_sentence_transformer.py
scripts/: generate_embeddings_modal.py  insert_ingredient_nutrition.py  insert_ingredient_prices.py
tests/: test_update_recipe_db.py
