[tool.poetry]
name = "chao_fan"
version = "0.1.0"
description = ""
authors = ["Kobi Felton <kobi.c.f@gmail.com>"]
license = "mIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
matplotlib = "^3.5.3"
py3-pinterest = {git = "https://github.com/bstoilov/py3-pinterest.git"}
pint = "^0.23"
python-dotenv = "^1.0.1"
sqlmodel = "^0.0.16"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
create_db = 'chao_fan.cli:setup_db'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
