[tool.poetry]
name = "chao_fan"
version = "0.1.0"
description = ""
authors = ["Kobi Felton <kobi.c.f@gmail.com>"]
license = "mIT"

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
matplotlib = "^3.5.3"
py3-pinterest = {git = "https://github.com/bstoilov/py3-pinterest.git"}
pint = "^0.23"
python-dotenv = "^1.0.1"
sqlmodel = "^0.0.16"
requests = "^2.31.0"
tqdm = "^4.66.2"
outlines = "^0.0.36"
tiktoken = "^0.6.0"
huggingface-hub = "^0.21.4"
sentence-transformers = "^2.5.1"
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.5"
nltk = "^3.8.1"
recipe-scrapers = "^14.55.0"
ingredient-parser-nlp = "^0.1.0b8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
setup_db = 'chao_fan.cli:setup_db'

[tool.poetry.group.dev.dependencies]
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
